--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@
 	<section class="stats">
 		<h2>Hi <span class="emoji wave"></span> !</h2>
 		<p>Welcome to the website of <b>AJbot</b>, a simple Discord bot.</p><br>
-		<p>It's a fun bot with lot's of different commands (slice, kill, kiss, hug, smile, cry etc...) You can ask more commands in <a href="https://discordapp.com/oauth2/authorize?client_id=727574553576079372&scope=bot&permissions=8" target="_blank">our&nbsp;server</a> !</p>
+		<p>It's a fun bot with lot's of different commands (slice, kill, kiss, hug, smile, cry etc...) You can ask more commands in <a href="https://discord.com/invite/BW7vSBdgaz" target="_blank">our&nbsp;server</a> !</p>
 	</section>
 
 	<article id="informations">
