--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		var COMMANDS = [
         {
             name: "test",
-            description: "To see if the bot is on.",
+            description: "To see if the bot is online.",
             category: strUcFirst("info | About the bot"),
             usage: [`${PREFIX}test`]
         },
@@ -47,7 +47,7 @@
         },
         {
             name: "addbot",
-            description: "To invite the bot in your discord server.",
+            description: "To invite the bot to your discord server.",
             category: strUcFirst("info | About the bot"),
             usage: [`${PREFIX}addbot`]
         },
@@ -71,7 +71,7 @@
         },
         {
             name: "hug",
-            description: "Let's hug someone by a gif !",
+            description: "Let's hug someone using a gif !",
             category: strUcFirst("love"),
             usage: [`${PREFIX}hug <user>`]
         },
@@ -89,19 +89,19 @@
         },
         {
             name: "hello",
-            description: "Say hello to someone or to everyone.",
+            description: "Say hello to someone.",
             category: strUcFirst("politeness"),
             usage: [`${PREFIX}hello`, `${PREFIX}hello <user>`]
         },
         {
             name: "bye",
-            description: "Say goodbye to someone or to everyone.",
+            description: "Say goodbye to someone.",
             category: strUcFirst("politeness"),
             usage: [`${PREFIX}bye`, `${PREFIX}bye <user>`]
         },
         {
             name: "sorry",
-            description: "Say sorry to someone or to everyone.",
+            description: "Say sorry to someone.",
             category: strUcFirst("politeness"),
             usage: [`${PREFIX}sorry`, `${PREFIX}sorry <user>`]
         },
@@ -113,13 +113,13 @@
         },
         {
             name: "thanks",
-            description: "Thank someone or everyone.",
+            description: "Thank someone.",
             category: strUcFirst("politeness"),
             usage: [`${PREFIX}thanks`, `${PREFIX}thanks <user>`]
         },
         {
             name: "laugh",
-            description: "This command will make you laugh...",
+            description: "This command will make you laugh...If you have a weird sense of humour of course",
             category: strUcFirst("happiness"),
             usage: [`${PREFIX}laugh`]
         },
@@ -131,7 +131,7 @@
         },
         {
             name: "evilsmile",
-            description: "You're making the smile of death <span class=\"emoji scream\"></span>.",
+            description: "Your deadly smile killed my grandfather <span class=\"emoji scream\"></span>.",
             category: strUcFirst("happiness"),
             usage: [`${PREFIX}evilsmile`]
         },
@@ -155,19 +155,19 @@
         },
         {
             name: "afraid",
-            description: "Sends a gif in which you're afraid.",
-            category: strUcFirst("violence"),
+            description: "Boo.",
+            category: strUcFirst("unsorted"),
             usage: [`${PREFIX}afraid`]
         },
         {
             name: "angry",
-            description: "You're going to explode with anger : goodbye !",
+            description: "Oh dear, you're mad now!",
             category: strUcFirst("violence"),
             usage: [`${PREFIX}angry`]
         },
         {
             name: "wasted",
-            description: "Go in a coffin or make someone go in it!",
+            description: "Get inside a coffin or make someone get in it!",
             category: strUcFirst("violence"),
             usage: [`${PREFIX}wasted`, `${PREFIX}wasted <user>`]
         },
@@ -191,7 +191,7 @@
         },
         {
             name: "kill",
-            description: "Think carefully before you kill someone. This command can send anyone to the cemetery <span class=\"emoji coffin\"> <span class=\"emoji skull_crossbones\"></span> ...",
+            description: "Think carefully before you kill someone. This command can send anyone to the graveyard <span class=\"emoji coffin\"> <span class=\"emoji skull_crossbones\"></span> ...",
             category: strUcFirst("violence"),
             usage: [`${PREFIX}kill <user>`]
         },
