--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="icon" href="https://cdn.discordapp.com/attachments/629576665533513741/782244099826384896/logo_ajbot_rond.png">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,700&display=swap" rel="stylesheet">
+	<script data-ad-client="ca-pub-8022433879609365" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	
 	<title>AJbot</title>
 </head>
@@ -1620,7 +1621,7 @@
 					<tr><th>Command</th><th>Description</th><th>Usage</th></tr>
 			</table>
 			<br><br>
-			
+
 			<h3 class="titrecmd" id="unsorted">Unsorted</h3>
 			<br><br>
 			<table class="tbl-commands" id="tbl-unsorted">
