--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="author" content="Kamboo and Baeka">
+	<meta name="description" content="Discord bot made with ❤ by Kamboo#9639 and Baeka#2540.">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="AJbot">
+	<meta property="og:description" content="Discord bot made with ❤ by Kamboo#9639 and Baeka#2540.">
+	<meta property="og:image" content="https://cdn.discordapp.com/attachments/629576665533513741/782244099826384896/logo_ajbot_rond.png" />
+	<meta name=theme-color content=#008080>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
 	<link rel="icon" href="https://cdn.discordapp.com/attachments/629576665533513741/782244099826384896/logo_ajbot_rond.png">
