--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
 		}
 
 		article#commands section ul {
-			background-color: #1a1b1b80;
+			background-color: #008080;
 			line-height: 35px;
 			list-style: none;
 			border-radius: 20px;
