--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
 		}
 
 		article#commands section ul {
-			background-color: #008080;
+			background-color: var(--AJBOTpr);
 			line-height: 35px;
 			list-style: none;
 			border-radius: 20px;
@@ -997,7 +997,7 @@
 		}
 		
 		article#commands section:hover ul {
-			background-color: #1a1b1b;
+			background-color: var(--AJBOTsec);
 		}
 
 		article#commands section ul li a {
@@ -1061,8 +1061,8 @@
 
 		article#commands section ul li a:hover {
 			font-size: 18pt;
-			color: var(--AJBOTpr);
-			text-shadow: 0px 0px 15px var(--AJBOTpr);
+			color: #000;
+			text-shadow: 0px 0px 15px var(--bgcolor);
 		}
 
 		.titrecmd {
