--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,7 @@ article#commands section ul li a:hover {
 	top: 50px;
 	text-align: center;
 	background-color: var(--bgcolor);
+	color: #008080;
 	width: 250px;
 	border-radius: 0 0 10px 0;
 }
