--- a/index.html
+++ b/index.html
@@ -1022,6 +1022,8 @@ article#commands table.tbl-commands td:nth-child(3) {
 
 article#commands table.tbl-commands th {
 	background-color: #1a1a1a;
+	color: #008080;
+}
 }
 
 article#commands table.tbl-commands td {
