--- a/index.html
+++ b/index.html
@@ -1438,10 +1438,10 @@
 
 <ul class="nav-mobile" id="nav-mobile">
 	<li class="lienMenu-mobile"><a href="#"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
-	<li class="lienMenu-mobile"><a target="_blank" href="https://ajbot.gitbook.io/docs/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
-	<li class="lienMenu-mobile"><a target="_blank" href="https://discord.gg/BW7vSBdgaz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
-	<li class="lienMenu-mobile"><a target="_blank" href="https://top.gg/bot/727574553576079372/vote"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
-	<li class="lienMenu-mobile"><a target="_blank" href="https://discordapp.com/oauth2/authorize?client_id=727574553576079372&scope=bot&permissions=8"><i class="fas fa-user-plus"></i>&nbsp;Invite bot</a></li>
+	<li class="lienMenu-mobile"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
+	<li class="lienMenu-mobile"><a target="_blank" href="http://discord.ajbot.xyz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
+	<li class="lienMenu-mobile"><a target="_blank" href="http://vote.ajbot.xyz"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
+	<li class="lienMenu-mobile"><a target="_blank" href="http://invite.ajbot.xyz"><i class="fas fa-user-plus"></i>&nbsp;Invite bot</a></li>
 </ul>
 	<img class="logoAjbot" src="https://cdn.discordapp.com/attachments/629576665533513741/782244099826384896/logo_ajbot_rond.png">
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
@@ -1830,7 +1830,7 @@
 		}
 	</style>
 	<h1 class="titre-partie">Ready ?</h1>
-	<div id="containerInvite"><a target="_blank" href="https://discordapp.com/oauth2/authorize?client_id=727574553576079372&scope=bot&permissions=8" id="invite-bot" class="button-ripple">Invite AJbot</a></div>
+	<div id="containerInvite"><a target="_blank" href="http://invite.ajbot.xyz" id="invite-bot" class="button-ripple">Invite AJbot</a></div>
 	<div class="footer-JSP">Made with <span class="emoji heart"></span> by Kamboo#9639 & Baeka#2540</div>
 </body>
 </html>
