--- a/index.html
+++ b/index.html
@@ -1409,10 +1409,10 @@
 <header>
 	<ul class="nav">
 		<li class="lienMenu"><a href="#"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
-		<li class="lienMenu"><a target="_blank" href="https://ajbot.gitbook.io/docs/"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
-		<li class="lienMenu"><a target="_blank" href="https://discord.gg/BW7vSBdgaz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
-		<li class="lienMenu"><a target="_blank" href="https://top.gg/bot/727574553576079372/vote"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
-		<li class="lienMenu"><a target="_blank" href="https://discordapp.com/oauth2/authorize?client_id=727574553576079372&scope=bot&permissions=8"><i class="fas fa-user-plus"></i>&nbsp;Invite bot</a></li>
+		<li class="lienMenu"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
+		<li class="lienMenu"><a target="_blank" href="http://discord.ajbot.xyz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
+		<li class="lienMenu"><a target="_blank" href="http://vote.ajbot.xyz"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
+		<li class="lienMenu"><a target="_blank" href="http://invite.ajbot.xyz"><i class="fas fa-user-plus"></i>&nbsp;Invite bot</a></li>
 	</ul>
 	<div class="menu-mobile" id="menu-mobile" onclick="addClassMenuMobile(), addClassMenuMobileTexte()">
 		<span></span>
@@ -1457,7 +1457,7 @@
 	<section class="stats">
 		<h2>Hi <span class="emoji wave"></span> !</h2>
 		<p>Welcome to the website of <strong>AJbot</strong>, a simple Discord bot.</p><br>
-		<p>It's a fun bot with lot's of different commands (slice, kill, kiss, hug, smile, cry etc...) You can ask more commands in <a href="https://discordapp.com/oauth2/authorize?client_id=727574553576079372&scope=bot&permissions=8" target="_blank">our&nbsp;server</a> !</p>
+		<p>It's a fun bot with lot's of different commands (slice, kill, kiss, hug, smile, cry etc...) You can ask more commands in <a href="http://invite.ajbot.xyz" target="_blank">our&nbsp;server</a> !</p>
 	</section>
 
 	<article id="informations">
@@ -1465,7 +1465,7 @@
 		<p><span class="gras">Prefix: </span><code class="normal">AJ!</code></p>
 		<p><span class="gras">Made with: </span><span class="emoji heart"></span> love and Discord.js</p>
 		<p><span class="gras">By: </span>Baeka#2540 and Kamboo#9639</p>
-		<p><span class="gras">Support server: </span><a href="https://discord.gg/BW7vSBdgaz" target="blank">here</a></p>
+		<p><span class="gras">Support server: </span><a href="http://invite.ajbot.xyz" target="blank">here</a></p>
 		<p><span class="gras">Help: </span><code class="normal">AJ!help [command]</code></p>
 	</article>
 	<div class="separation"></div>
@@ -1685,7 +1685,7 @@
 		</style>
 		<h1 class="titre-partie">Docs & Commands</h1>
 		<div class="btn-docs">
-			<a target="_blank" href="https://ajbot.gitbook.io/docs/">Click here!</a>
+			<a target="_blank" href="https://docs.ajbot.xyz">Click here!</a>
 		</div>
 		<!-- <section>
 			<ul>
