--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <link rel="icon" href="https://cdn.discordapp.com/attachments/629576665533513741/782244099826384896/logo_ajbot_rond.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@1,700&display=swap" rel="stylesheet">
-        <script data-ad-client="ca-pub-2998914403804541" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script type="text/javascript">
+            window._mNHandle = window._mNHandle || {};
+            window._mNHandle.queue = window._mNHandle.queue || [];
+            medianet_versionId = "3121199";
+        </script>
+        <script src="https://contextual.media.net/dmedianet.js?cid=8CUZHEBOB" async="async"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-197098967-1">
         </script>
@@ -93,17 +98,14 @@
                 </div>
             </div>
         </div>
-        <div class="pub_horizontal" align="right">        
-            <!-- responsive horizotal -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-2998914403804541"
-                data-ad-slot="3013942237"
-                data-ad-format="auto"
-                data-full-width-responsive="true">
-            </ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
+        <div id="271281143">
+            <script type="text/javascript">
+                try {
+                    window._mNHandle.queue.push(function (){
+                        window._mNDetails.loadTag("271281143", "728x90", "271281143");
+                    });
+                }
+                catch (error) {}
             </script>
         </div>
         <div class="separation"></div>
@@ -143,33 +145,27 @@
                 <a target="_blank" href="https://docs.ajbot.xyz">Click here!</a>
             </div>
         </article>
-        <div class="pub_horizontal" align="right">        
-            <!-- responsive horizotal -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-2998914403804541"
-                data-ad-slot="3013942237"
-                data-ad-format="auto"
-                data-full-width-responsive="true">
-            </ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
+        <div id="271281143">
+            <script type="text/javascript">
+                try {
+                    window._mNHandle.queue.push(function (){
+                        window._mNDetails.loadTag("271281143", "728x90", "271281143");
+                    });
+                }
+                catch (error) {}
             </script>
         </div>
         <div class="separation"></div>
         <h1 class="titre-partie">Ready ?</h1>
         <div id="containerInvite"><a target="_blank" href="http://invite.ajbot.xyz" id="invite-bot" class="button-ripple">Invite AJbot</a></div>
-        <div class="pub_horizontal" align="right">        
-            <!-- responsive horizotal -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-2998914403804541"
-                data-ad-slot="3013942237"
-                data-ad-format="auto"
-                data-full-width-responsive="true">
-            </ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
+        <div id="271281143">
+            <script type="text/javascript">
+                try {
+                    window._mNHandle.queue.push(function (){
+                        window._mNDetails.loadTag("271281143", "728x90", "271281143");
+                    });
+                }
+                catch (error) {}
             </script>
         </div>
         <div class="footer-JSP">Made with <span class="emoji heart"></span> by Kamboo#9639 & Baeka#2540</div>
