--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="author" content="Kamboo and Baeka">
         <meta name="description" content="Discord bot made with ❤ by Kamboo#9639 and Baeka#2540.">
         <meta property="og:type" content="website">
+        <meta property="og:url" content="https://ajbot.xyz">
+        <meta property="og:site_name" content="AJbot">
         <meta property="og:title" content="AJbot">
         <meta property="og:description" content="Discord bot made with ❤ by Kamboo#9639 and Baeka#2540.">
         <meta property="og:image" content="https://cdn.discordapp.com/attachments/629576665533513741/782244099826384896/logo_ajbot_rond.png" />
