--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <script type="text/javascript" src="./main.js"></script>
         <header>
             <ul class="nav">
-                <li class="lienMenu"><a onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
+                <li class="lienMenu"><a style="cursor: pointer;" onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
                 <li class="lienMenu"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
                 <li class="lienMenu"><a target="_blank" href="http://discord.ajbot.xyz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
                 <li class="lienMenu"><a target="_blank" href="http://vote.ajbot.xyz"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
@@ -54,7 +54,7 @@
         </header>
 
         <ul class="nav-mobile" id="nav-mobile">
-            <li class="lienMenu-mobile"><a onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
+            <li class="lienMenu-mobile"><a style="cursor: pointer;" onclick="window.scrollTo(0,0)"><i class="fa fa-home" aria-hidden="true"></i>&nbsp;Home</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="https://docs.ajbot.xyz"><i class="fa fa-book" aria-hidden="true"></i>&nbsp;Docs</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="http://discord.ajbot.xyz"><i class="fab fa-discord"></i>&nbsp;Join Discord</a></li>
             <li class="lienMenu-mobile"><a target="_blank" href="http://vote.ajbot.xyz"><i class="fas fa-vote-yea"></i>&nbsp;Vote</a></li>
